--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
+
+/* These are some predefined css for helping me design the page */
 * {
   margin:0;
   padding:0;
